# ugui

./: README.md  main.html  main.py  pyproject.toml
examples/: 01-hello.py  02-components.py  02-semantic-html.py
examples/picocss/: README.md
src/ugui/: __init__.py  app.py  component.py  components.py  css.py  html.py  page.py
src/ugui/components/: __init__.py  base_css.py  box.py  button.py  card.py  form.py  grid.py  hero.py  link.py  material_icon.py  navbar.py
src/ugui/components/og/: __init__.py  base_css.py  button.py  card.py  form.py  hero.py  material_icon.py
src/ugui/components/plain/: __init__.py  base_css.py  box.py
src/ugui/static/css/pico/: pico.min.css
src/ugui/static/material-icons/: README.md
src/ugui/utils/: colors.py
