[tool.poetry]
name = "ugui"
version = "0.0.3"
description = ""
authors = ["Harshad Sharma <harshad@sharma.io>"]
readme = "README.md"
packages = [{ include = "ugui", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.20.0"
quart-cors = "^0.8.0"
hypercorn = "^0.17.3"
click = "^8.1.8"
asgiref = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
